# aml-connect

./: .coverage  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  aspinity.proto  babel.config.cjs  jest.config.mjs  package-lock.json  package.json  tarpaulin-report.html  test_network.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
aml_simulator_pywrapper/: .coverage  .pylintrc  README.md  aspinity-0.7.2-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  aspinity_pb2.py  aspinity_wrapper-x86_64-pc-windows-msvc.spec  aspinity_wrapper-x86_64-unknown-linux-gnu.spec  build-wrapper.ps1  output.py  requirements.txt  setup-wrapper.ps1  simulate_visualize.ipynb  simulator_interface.py  simulator_wrapper.py  test.ipynb  test_json_to_objects.ipynb  validate.ipynb  wrapper.py  wrapper_components.py  wrapper_interface.py  wrapper_network.py
aml_simulator_pywrapper/templates/: network_template.py.j2  simulate_network.template.py.j2
aml_simulator_pywrapper/test/: test_energy_change.json  test_get_elements.py  test_heart_rate.json  test_network_acdiff.json  test_network_all.json  test_simulate_network.py  test_wrapper_components.py  test_wrapper_components2.py
src/: App.scss  App.tsx  _global.scss  constants.ts  hooks.ts  main.scss  main.tsx  routes.ts  store.ts  utils.ts  vite-env.d.ts
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/bindings/: DataSet.ts  FileUploadError.ts
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-07-25-214325_project/: down.sql  up.sql
src-tauri/migrations/2023-07-25-214325_projects/: up.sql
src-tauri/migrations/2023-07-31-190609_input_data/: down.sql  up.sql
src-tauri/migrations/2023-07-31-190615_audio_file/: down.sql  up.sql
src-tauri/migrations/2023-07-31-190615_audio_files/: up.sql
src-tauri/migrations/2023-09-08-182820_input_data/: down.sql  up.sql
src-tauri/migrations/2023-09-08-182832_audio_files/: down.sql  up.sql
src-tauri/resources/: elements.json
src-tauri/src/: .env  lib.rs  main.rs
src-tauri/src/aml_core/: data_manager.rs  date_time.rs  element_repository.rs  elements.json  filter_bank.rs  mod.rs  network_manager.rs  sample_request.json
src-tauri/src/aml_core/db_adapter/: db_error.rs  mod.rs  models.rs  schema.rs
src-tauri/src/aml_core/file_data_manager/: get_files.rs  mod.rs  put_files.rs
src-tauri/src/aml_core/project_manager/: create_project.rs  create_projects.rs  delete_project.rs  get_projects.rs  mod.rs  update_project.rs
src-tauri/tests/: integration_test.rs  integration_tests.rs  network_integration_tests.rs  projects_integration_tests.rs
src/pages/: Root.scss  (+1 more)
test_resources/: Network.py  nw5000_Network.py  nw5001_Network.py  sample_request.json  sidecar_test_network.json  test_energy_change.json  test_energy_change_actual.json  test_network.json  test_network_all.json  test_network_all_with_hidden_params.json  test_vibration_spectrum.json
(+435 files in other folders)
