[package]
name = "aml_connect"
version = "0.0.0"
description = "GUI applicaion for Aspinity's Analog ML Chip simulator"
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = [ "fs-write-file", "path-all", "fs-exists", "fs-read-file", "fs-read-dir", "process-command-api", "shell-open", "shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mockall = "0.11.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
