[package]
name = "aml_connect"
version = "0.0.0"
description = "GUI applicaion for Aspinity's Analog ML Chip simulator"
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["process-command-api", "shell-open", "shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mockall = "0.11.4"
diesel = { version = "2.1.0", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.1.0"
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
log = "0.4"
chrono = "0.4"
simple_logger = "4.2.0"
dotenvy = "0.15"
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
ts-rs = "6.1"
dirs = "3.0"
strum = "0.25"
strum_macros = "0.25"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
